gke/authentication.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication-service 
spec:
  selector:
    app: authentication-service 
  ports:
    - protocol: TCP
      port: 80                  
      targetPort: 80          

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-service
  template:
    metadata:
      labels:
        app: authentication-service
    spec:
      containers:
      # ONAT: Code itself
      - name: authentication-service
        image: gcr.io/GOOGLE_CLOUD_PROJECT_PLACEHOLDER/authentication-service:latest
        ports:
          - containerPort: 80
        resources:
          requests:          
            memory: "64Mi"
            cpu: "100m"      
          limits:
            memory: "128Mi"
            cpu: "500m"      
      
      # ONAT: Cloud SQL Auth Proxy
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.33.0
        command:
          - "/cloud_sql_proxy"
          # ONAT: Instance Connection Name from GCP Console
          - "-instances=GOOGLE_CLOUD_PROJECT_PLACEHOLDER:europe-west1:postgres-instance=tcp:5432"
          - "-credential_file=/secrets/key.json"
        securityContext:
          runAsNonRoot: true
        volumeMounts:
          - name: cloud-sql-creds-volume
            mountPath: /secrets
            readOnly: true
      
      # ONAT: Mount the secret key
      volumes:
        - name: cloud-sql-creds-volume
          secret:
            secretName: cloud-sql-creds
